# dosbot

./: .coverage  .dockerignore  .env.example  .env.local  .gitignore  Dockerfile  README.md  check_zigzag_period.py  data_corrector.py  data_for_ml_maker.py  docker-compose.yml  plot_all_chart.py  plot_zigzag_chart.py  pyproject.toml  pytest.ini  requirements.txt  zigzag_analysis_detailed.txt  zigzag_analyzer.py  zigzag_ml_model.py
.github/workflows/: ci.yml  release.yml
charts/zigzag/: zigzag_analysis_report.txt
docs/: CI_CD.md  DEPLOYMENT.md  DEVELOPMENT.md  ENVIRONMENT.md  Plan v14.md
minio-data/.minio.sys/: format.json
src/: config.py  main.py
src/bot/: __init__.py
src/data/: data_loader.py  data_validator.py  db_setup.py
src/models/: model.py
src/utils/: helpers.py
tests/: test_basic.py  test_bot.py  test_config.py  test_zigzag_analyzer.py
